# openinit

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
.cargo/: config.toml
openinit.d/: error_default.yml  error_loop.yml  hostname.yml  loop.yml  shell.yml  tty.yml
src/: colors.rs  main.rs  util.rs
src/cli/: args.rs  help.rs  mod.rs
src/core/: err.rs  init.rs  log.rs  mod.rs  target.rs
src/daemon/: mod.rs  service.rs  system.rs
src/sys/: mod.rs  panic.rs  reboot.rs  sysrq.rs
