[package]
name = "openinit"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
serde_yaml = "0.9.34"

subprocess = "0.2.9"
libc = "0.2.154"

thiserror = "1.0.60"
eyre = "0.6.12"


[profile.release]
opt-level = 'z'
strip = true
lto = true
