[package]
name = "openinit"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"

subprocess = "0.2.9"
libc = "0.2.169"

thiserror = "2.0.11"
eyre = "0.6.12"


[profile.release]
opt-level = 'z'
strip = true
lto = true
